   containing a `by' variable, if present. Predict.mat expects the same of 
   its `data' argument. wrapper functions smooth.construct2 and 
   Predict.mat2 will accept a data frame containing any number of variables 
   -- all that is required is that `object$terms' can be evaluated using 
   it. These functions handle repeat rows in matrix arguments efficiently.


* `gam.fit' passes corrected n to `magic' so that `n' used in gcv/ubre
   does not include obs with zero prior weight. `gam.fit3' already doing 
   this...

* `magic' and `gam.fit3' now allow log smoothing parameters to be a 
  linear transformation of a smaller set of underlying smoothing parameters.

* `mgcv' based fitting has been removed as an option in `gam', as has 
  Pearson based GCV. In consequence `am' argument removed from 
  `gam.method' and `globit' removed from `gam.control'.

* `get.var' now coerces matrix values to numeric vectors, to facilitate 
   the handling of linear functionals of smooths.

* `gam.fit2' has been removed, since gam.fit3 is simply better.

* the `absorb.cons' option has been removed from `gam.control'.

* `fix.family.link' and `fix.family.var' bug fix --- only return 
   family unmodified is all required derivative functions are present.

* `smoothCon' now returns a list of smooth objects to facilitate factor
  `by' variables.

* `smoothCon' makes smooth object labels more informative, if there are 
  `by' variables... this also makes default plots more informative.

* `plot.gam' indicates `by' variables in labels

* `gamm.setup' modified to call `gam.setup' for most of the setup, leaving 
  just the re-parameterization step to do. 

* `gamm' modified to allow constraint absorption (same as `gam')

* `gamm' bug fixed whereby "cc" smooths would get the wrong null space 
  dimension (effect was small, but noticeable, in practice e.g. Cairo 
  temperature example from chapter 6 of Wood, 2006, book).

* print methods now return first argument invisibly as they should.
